[gd_scene load_steps=4 format=3 uid="uid://cd2p3lu01aric"]

[ext_resource type="Script" path="res://core/ui/card_ui/navigation/context_bar_menu.gd" id="1_wt5if"]
[ext_resource type="PackedScene" uid="uid://dcrx6jkhn0o7u" path="res://core/ui/components/battery_container.tscn" id="5_ts3bb"]
[ext_resource type="Script" path="res://core/ui/components/input_icon.gd" id="8_l6mey"]

[node name="ContextBar" type="PanelContainer"]
z_index = 20
custom_minimum_size = Vector2(0, 45)
size_flags_vertical = 8
theme_type_variation = &"ContextBar"
script = ExtResource("1_wt5if")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DebugLabel" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="AcceptIcon" type="HBoxContainer" parent="MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
script = ExtResource("8_l6mey")
text = "Accept"
path = "ui_accept"

[node name="BackIcon" type="HBoxContainer" parent="MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
script = ExtResource("8_l6mey")
text = "Back"
path = "ogui_east"

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="TimeLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "12:00AM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BatteryContainer" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("5_ts3bb")]
unique_name_in_owner = true
layout_mode = 2

[node name="QBContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="InputIcon" type="HBoxContainer" parent="MarginContainer/HBoxContainer/QBContainer"]
layout_mode = 2
script = ExtResource("8_l6mey")
text = "Quick Bar Menu"
path = "ogui_qb"
